Adding database seeding script and updated readme

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     <title>Not Another TODO</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="app"></div>
     <script src="../dist/bundle.js"></script>
   </body>
 </html>
